--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
+<h4>
+  <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+</h4>
+
 <h1>Posts</h1>
 
 <div id="posts">
